base/src/test/resources/failure/cubical/transport-non-constant.aya.txt
In file $FILE:17:5 ->

  15 | 
  16 | def GG (A : I -> Type) (a : A 0) (i : I) : A i
  17 |   => (\j => A (i /\ j)).coe a freeze i
            ^-------------------------------^

Error: Under the cofibration:
         i
       The type in the body still depends on the interval parameter:
         \ j => A (i /\ j)
         (Normalized under cofibration: \ j => A j)
       which is not allowed in coercion

In file $FILE:21:5 ->

  19 | 
  20 | def GG2 (A : I -> Type) (a : A 0) (i : I) : A i
  21 |   => (\j => A j).coe a freeze i
            ^------------------------^

Error: Under the cofibration:
         i
       The type in the body still depends on the interval parameter:
         \ j => A j
       which is not allowed in coercion

In file $FILE:25:37 ->

  23 | 
  24 | def GG3 (A : I -> Type) (a : A 0) (i : I) : A i
  25 |   => (\j => A (i /\ j)).coe a freeze a
                                            ^^

Error: Cannot check the expression
         a
       of type
         A 0
       against the type
         I

In file $FILE:25:5 ->

  23 | 
  24 | def GG3 (A : I -> Type) (a : A 0) (i : I) : A i
  25 |   => (\j => A (i /\ j)).coe a freeze a
            ^-------------------------------^

Error: Under the cofibration:
         <a>
       The type in the body still depends on the interval parameter:
         \ j => A (i /\ j)
       which is not allowed in coercion

4 error(s), 0 warning(s).
What are you doing?
